Change holes to num_holes

--- a/lib/golf_web/templates/course/form.html.eex
+++ b/lib/golf_web/templates/course/form.html.eex
@@ -10,8 +10,8 @@
   <%= error_tag f, :name %>
 
   <%= label f, :holes %>
-  <%= number_input f, :holes %>
-  <%= error_tag f, :holes %>
+  <%= number_input f, :num_holes %>
+  <%= error_tag f, :num_holes %>
 
   <div>
     <%= submit "Save" %>
